Created login logout logic. Added some front end

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <div class="navbar navbar-inverse navbar-fixed-top bs-docs-nav">
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container">
                 <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
                     <span class="icon-bar"></span>
@@ -29,12 +29,16 @@
                         <li>
                             <a href="#">Сторінка</a>
                         </li>
-                        
+
                     </ul>
                 </div>
             </div>
-        </div>
+        </nav>
+        <div class="container">
+            <div class="row innerContent">
 
+            </div>
+        </div>
         <!--@@js-dev-start@@ -->
         <!-- jQuery itself is loaded from Google CDN -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -57,7 +61,7 @@
         <script src="core/cache.js"></script>
         <script src="core/services.js"></script>
         <script src="core/controller.js"></script>
-        <script src="core/i18n.js"></script>
+        <!--<script src="core/i18n.js"></script>-->
         <script src="core/analytics.js"></script>
         <script src="core/fragments.js"></script>
         <!--@@js-dev-end@@ -->
