Added file upload logic and implemented user profile

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -67,8 +67,8 @@
         <script src="lib/jquery.validate.markers.js"></script>
         <script src="lib/jquery.validate.extra.js"></script>
         <script src="lib/jquery.ba-bbq.js"></script>
-        <script src="lib/jquery.toXML.js"></script>
-
+        <script src="lib/jquery.form.js"></script>
+        
         <!-- Project code includes -->
         <script src="core/debug.js"></script>
         <script src="core/utils.js"></script>
