--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -68,6 +68,7 @@
         <script src="lib/jquery.validate.extra.js"></script>
         <script src="lib/jquery.ba-bbq.js"></script>
         <script src="lib/jquery.form.js"></script>
+        <script src="lib/moment.min.js"></script>
         
         <!-- Project code includes -->
         <script src="core/debug.js"></script>
