Added autocomplete for departments

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -89,6 +89,7 @@
 
         <!-- Library includes -->
         <script src="lib/bootstrap/bootstrap.min.js"></script>
+        <script src="lib/bootstrap/bootstrap-typeahead.js"></script>
         <script src="lib/context.js"></script>
         <script src="lib/jquery.tools.expose.js"></script>
         <script src="lib/jquery.tools.overlay.js"></script>
@@ -99,7 +100,10 @@
         <script src="lib/jquery.ba-bbq.js"></script>
         <script src="lib/jquery.form.js"></script>
         <script src="lib/moment.min.js"></script>
-
+        
+        <!--Widgets-->
+        <script src="widgets/departmentAutoComplete/widget.js"></script>
+        
         <!-- Project code includes -->
         <script src="core/debug.js"></script>
         <script src="core/modals.js"></script>
