Implemented add user logic and show user table

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Барком</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="content-style-type"     content="text/css" />
         <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
@@ -103,6 +103,7 @@
         
         <!--Widgets-->
         <script src="widgets/departmentAutoComplete/widget.js"></script>
+        <script src="widgets/usersAutoComplete//widget.js"></script>
         
         <!-- Project code includes -->
         <script src="core/debug.js"></script>
