Added layout for user roles

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -100,6 +100,7 @@
         <script src="lib/jquery.ba-bbq.js"></script>
         <script src="lib/jquery.form.js"></script>
         <script src="lib/moment.min.js"></script>
+        <script src="lib/jquery.hammer.min.js"></script>
         
         <!--Widgets-->
         <script src="widgets/departmentAutoComplete/widget.js"></script>
